--- a/scss/utilities/_position.scss
+++ b/scss/utilities/_position.scss
@@ -10,11 +10,11 @@
   top: 0;
 }
 
-.u-positionTop-50 {
+.u-positionTop50 {
   top: 50%;
 }
 
-.u-positionTop-100 {
+.u-positionTop100 {
   top: 100%;
 }
 
@@ -22,11 +22,11 @@
   right: 0;
 }
 
-.u-positionRight-50 {
+.u-positionRight50 {
   right: 50%;
 }
 
-.u-positionRight-100 {
+.u-positionRight100 {
   right: 100%;
 }
 
@@ -34,11 +34,11 @@
   bottom: 0;
 }
 
-.u-positionBottom-50 {
+.u-positionBottom50 {
   bottom: 50%;
 }
 
-.u-positionBottom-100 {
+.u-positionBottom100 {
   bottom: 100%;
 }
 
@@ -46,11 +46,11 @@
   left: 0;
 }
 
-.u-positionLeft-50 {
+.u-positionLeft50 {
   left: 50%;
 }
 
-.u-positionLeft-100 {
+.u-positionLeft100 {
   left: 100%;
 }
 
